Fix spacing issue in 'header-page.php'

--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -1,7 +1,6 @@
 .page-header{
-	.description{
-		h1{
-		}
+	h1{
+		margin-bottom: 3rem;
 	}
 }
 .primary-content{
